src/app.scss
@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;600&display=swap');

*{
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  background-color: #121212;
  color: #fff;
  font-family: 'Rubik', sans-serif;
  min-height: 100dvh;
}

.ii {
  width: 20vh;
  height: 20vh;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%,-50%);
  background-color: #121212;
  border-radius: 2vh;
  box-shadow: -12px -12px 28px #20202073, 12px 12px 20px #00000073;
}

.nav-bar {
  width: 100%;
  height: 8.82dvh;
  display: flex;
  justify-content: space-between;
  align-items: center;
  list-style: none;
  position: relative;
  background-color: #181818;
  padding: 12px 20px;
}

.logo, .logo img {
  width: 6vh;
  height: 6vh;
}

.menu {display: flex;}
.menu li {
  padding-left: 30px;
  font-family: "Space Mono", monospace;
}

.menu li a {
  display: inline-block;
  text-decoration: none;
  color: #fff;
  text-align: center;
  transition: 0.15s ease-in-out;
  position: relative;
  text-transform: uppercase;
  font-weight: bold;
  font-size: 2.1vh;
}

.open-menu , .close-menu {
  position: absolute;
  color: #fff;
  cursor: pointer;
  font-size: 1.5rem;
  display: none;
}

.open-menu {
  top: 50%;
  right: 20px;
  transform: translateY(-50%);
}

.close-menu {
  top: 20px;
  right: 20px;
}

#check {display: none;}

@media(max-width: 610px){
  .menu {
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 80%;
    height: 100vh;
    position: fixed;
    top: 0;
    right: -100%;
    z-index: 100;
    background-color: #181818;
    transition: all 0.2s ease-in-out;
  }
  .menu li {margin-top: 40px;}
  .menu li a {padding: 10px;}
  .open-menu , .close-menu {display: block;}
  #check:checked ~ .menu {right: 0;}
}

.wave {
  background-color: transparent;
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 12dvh;
}

.wave.wave1 {
  background-image: url('$lib/assets/wave1.png');
  background-size: 100vw 12dvh;
  z-index: 5;
  animation: move 5s linear infinite;
}

.wave.wave2 {
  background-image: url('$lib/assets/wave2.png');
  background-size: 100vw 12dvh;
  z-index: 10;
  opacity: .65;
  animation: move 10s linear infinite;
}

.wave.wave3 {
  background-image: url('$lib/assets/wave3.png');
  background-size: 100vw 12dvh;
  z-index: 15;
  opacity: .4;
  animation: move 15s linear infinite;
}

@keyframes move {
  0% {
   background-position: 0 bottom;
  }

  100% {
   background-position: 100vw bottom;
  }
}

